パスワード再設定メール送信機能の実装
・パスワードの再設定メールを送信するための設定を行いました。(envファイルを含む)
・ResetPasswordNotificationを作成、デフォルトのメール設定をオーバーライドし、再設定時に送信されるメールの内容が日本語になるよう記述を編集しました。

--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -1312,6 +1312,11 @@ label {
   color: steelblue;
 }
 
+.auth-field__message {
+  font-size: 12px;
+  padding: 10px 0;
+}
+
 .auth-submit {
   width: 100%;
   border-top: 1px solid whitesmoke;
@@ -1333,6 +1338,15 @@ label {
   background-color: whitesmoke;
   color: crimson;
   font-size: 12px;
+}
+
+.auth-status-message {
+  margin: 10px auto;
+  max-width: 360px;
+  color: #5064b4;
+  background-color: whitesmoke;
+  font-size: 14px;
+  text-align: center;
 }
 
 @media (max-width: 1024px) {
