--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -855,23 +855,23 @@ label {
   padding: 28px 20px;
 }
 
-.ingredient-form__head {
+.ingredient-form__box__head {
   padding-bottom: 20px;
   font-size: 14px;
   font-weight: bold;
 }
 
-.ingredient-form__secondhead {
+.ingredient-form__box__secondhead {
   font-size: 12px;
 }
 
-.ingredient-form__secondhead__name {
+.secondhead-name {
   width: 60%;
   padding-left: 6px;
   float: left;
 }
 
-.ingredient-form__secondhead__amount {
+.secondhead-amount {
   width: 40%;
   padding-left: 16px;
   float: right;
