--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -912,6 +912,28 @@ label {
   border-radius: 4px;
 }
 
+.ingredient-button {
+  padding-top: 10px;
+  text-align: center;
+}
+
+.ingredient-button__add {
+  padding: 8px 16px;
+  color: whitesmoke;
+  font-size: 14px;
+  background-color: #788cbe;
+  -webkit-appearance: none;
+}
+
+.ingredient-button__remove {
+  padding: 8px 16px;
+  color: whitesmoke;
+  font-size: 14px;
+  background-color: #888;
+  margin-left: 10px;
+  -webkit-appearance: none;
+}
+
 .recipe-submit {
   width: 100%;
   text-align: center;
