--- a/code/resources/sass/recipes/_form.scss
+++ b/code/resources/sass/recipes/_form.scss
@@ -165,6 +165,28 @@
     }
 }
 
+.ingredient-button{
+    padding-top: 10px;
+    text-align: center;
+    &__add{
+        // display: inline-block;
+        padding: 8px 16px;
+        color: whitesmoke;
+        font-size: 14px;
+        background-color: $lightpurple;
+        -webkit-appearance: none;
+    }
+    &__remove{
+        // display: inline-block;
+        padding: 8px 16px;
+        color: whitesmoke;
+        font-size: 14px;
+        background-color: #888;
+        margin-left: 10px;
+        -webkit-appearance: none;
+    }
+}
+
 .recipe-submit{
     width: 100%;
     text-align: center;
