Processフィールド数可変化の準備
・Recipe新規投稿フォーム内、調理工程：Processの項目をユーザーが自由に増減できるようにするための事前準備として、CreateProcesses.vueを作成し、create.blade.phpから読み込みができるよう設定しました。
・上記変更に対応するため、_form.scssの記述に軽微な修正を行いました。

--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -958,13 +958,17 @@ label {
   padding: 28px 20px;
 }
 
-.process-form__head {
+.process-form__box {
+  width: 100%;
+}
+
+.process-form__box__head {
   padding-bottom: 10px;
   font-size: 14px;
   font-weight: bold;
 }
 
-.process-form__content {
+.process-form__box__content {
   padding-bottom: 20px;
 }
 
