--- a/code/resources/sass/recipes/_form.scss
+++ b/code/resources/sass/recipes/_form.scss
@@ -207,13 +207,16 @@
 .process-form{
     width: 100%;
     padding: 28px 20px;
-    &__head{
-        padding-bottom: 10px;
-        font-size: 14px;
-        font-weight: bold;
-    }
-    &__content{
-        padding-bottom: 20px;
+    &__box{
+        width: 100%;
+        &__head{
+            padding-bottom: 10px;
+            font-size: 14px;
+            font-weight: bold;
+        }
+        &__content{
+            padding-bottom: 20px;
+        }
     }
 }
 
