新規投稿用Processフィールドの作成
・CreateProcesses.vueを編集し、追加操作前の初期フィールドと追加/削除ボタンを作成し、レイアウトを調整しました。

--- a/code/resources/sass/recipes/_form.scss
+++ b/code/resources/sass/recipes/_form.scss
@@ -165,7 +165,7 @@
     }
 }
 
-.ingredient-button{
+.ingredient-button, .process-button{
     padding-top: 10px;
     text-align: center;
     &__add{
