--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -912,12 +912,14 @@ label {
   border-radius: 4px;
 }
 
-.ingredient-button {
+.ingredient-button,
+.process-button {
   padding-top: 10px;
   text-align: center;
 }
 
-.ingredient-button__add {
+.ingredient-button__add,
+.process-button__add {
   padding: 8px 16px;
   color: whitesmoke;
   font-size: 14px;
@@ -925,7 +927,8 @@ label {
   -webkit-appearance: none;
 }
 
-.ingredient-button__remove {
+.ingredient-button__remove,
+.process-button__remove {
   padding: 8px 16px;
   color: whitesmoke;
   font-size: 14px;
