詳細ページのレイアウトの修正
・画像を投稿しなかった場合に表示するメッセージの行の高さを複数種のデバイスに対応させるため、_responsive.scssに設定を追記しました。

--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -1394,6 +1394,10 @@ label {
     height: 300px;
   }
 
+  .show-no-image {
+    line-height: 300px;
+  }
+
   .ingredient__box__amount {
     font-size: 12px;
   }
