--- a/code/resources/sass/config/_responsive.scss
+++ b/code/resources/sass/config/_responsive.scss
@@ -16,6 +16,10 @@
             height: 300px;
         }
     }
+    
+    .show-no-image{
+        line-height: 300px;
+    }
 
     .ingredient{
         &__box{
